<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:rdv="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:padding="@dimen/paddingBig">

        <TextView
            style="@style/styTitleWhiteSingleLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/strCompanyDetail"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:src="@drawable/ic_close_white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/txtErrorMessage"
            style="@style/stySmallRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:visibility="gone" />

        <me.zhanghai.android.materialedittext.MaterialTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin">

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:maxLength="50"
                android:id="@+id/edCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strVendorName"
                android:inputType="text" />
        </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

        <me.zhanghai.android.materialedittext.MaterialTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:maxLength="13"
                android:id="@+id/edCompanyPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strVendorPhone"
                android:inputType="phone" />
        </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/isOwner"
            style="@style/stySubTitleBlackSingleLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:checked="true"
            android:text="@string/msgAreYouOwner"
            android:textOff="@string/strNo"
            android:textOn="@string/strYes"
            android:theme="@style/stySwitch" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/isSalesman"
            style="@style/stySubTitleBlackSingleLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:checked="true"
            android:text="@string/msgAreYouSalesman"
            android:textOff="@string/strNo"
            android:textOn="@string/strYes"
            android:theme="@style/stySwitch" />
    </LinearLayout>

    <com.github.silvestrpredko.dotprogressbar.DotProgressBar
        android:id="@+id/dot_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dorProgressBarheight"
        android:visibility="gone"
        custom:amount="5"
        custom:duration="@android:integer/config_mediumAnimTime"
        custom:endColor="@color/red"
        custom:startColor="@color/red" />

    <LinearLayout
        android:id="@+id/lyBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin"
        android:orientation="horizontal">

        <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            rdv:rdv_rippleAnimationDuration="600"
            rdv:rdv_rippleAnimationFrames="60"
            rdv:rdv_rippleAnimationPeakFrame="15"
            rdv:rdv_rippleColor="@color/white"
            rdv:rdv_rippleMaxAlpha="0.8"
            rdv:rdv_rippleRadius="@dimen/rippleRadius">

            <Button
                android:id="@+id/btnCancel"
                style="@style/btnRed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonHeight"
                android:text="@string/strCancel" />
        </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>

        <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            rdv:rdv_rippleAnimationDuration="600"
            rdv:rdv_rippleAnimationFrames="60"
            rdv:rdv_rippleAnimationPeakFrame="15"
            rdv:rdv_rippleColor="@color/white"
            rdv:rdv_rippleMaxAlpha="0.8"
            rdv:rdv_rippleRadius="@dimen/rippleRadius">

            <Button
                android:id="@+id/btnSave"
                style="@style/btnRed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonHeight"
                android:text="@string/strSave" />
        </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>
    </LinearLayout>
</LinearLayout>